http, konos, proxy, rest, soap, ui, ui-elements: added javalin and removed sparkjava from project